--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -273,6 +273,77 @@ iframe {
     font-size: 3rem;
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.3);
+}
+
+.inputOutline {
+    position: absolute;
+    padding: 0.5vh;
+    border-radius: 20px;
+    height: 20vh;
+    width: 30vh;
+}
+
+.inputOutline > textarea {
+    background-color: #fefefe;
+    /* 5% from the top, 15% from the bottom and centered */
+    border: 2px solid black;
+    width: 100%;
+    height: 100%;
+    font-size: 3vh;
+    border-radius: 20px;
+    padding: 1vh 2vh 1vh 1vh;
+     /* Could be more or less, depending on screen size */
+}
+
+#closeBtn {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: red;
+    background-color: white;
+    font-size: 3vh;
+    font-weight: bold;
+    transform: translate(40px, -20px);
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+#addBtn {
+    position: absolute;
+    right: 25px;
+    bottom: 0;
+    color: deepskyblue;
+    background-color: white;
+    font-size: 3vh;
+    font-weight: bold;
+    transform: translate(40px, 10px);
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+}
+
+#addBtn:focus {
+    color: black;
+}
+
+#closeBtn:focus {
+    color: red;
+}
+
 
 
 @media screen and (min-aspect-ratio: 1/1) {
