--- a/css/myProfile.css
+++ b/css/myProfile.css
@@ -85,10 +85,30 @@ img {
     font-size: 2vh;
     border-radius: 30px;
     border: none;
-    margin: 40px auto;
+    margin: 40px auto 10px;
     height: 17vw;
     text-align: justify;
     opacity: 0.8;
+}
+
+#tags {
+    width: 85%;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1vh;
+    margin-bottom: 15px;
+}
+
+#tags p {
+    padding: 0.5vh;
+    font-weight: bold;
+    text-align: center;
+    background-color: white;
+    border-radius: 20px;
+    min-width: 8vh;
+    margin: 0;
 }
 
 .search-with-filter {
@@ -310,7 +330,7 @@ a, a:hover, a:visited, a:active {
 
     #userDesc {
         height: 150px;
-        margin: 30px;
+        margin: 30px 30px 10px 30px;
     }
 
     .menuTopRow {
