--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -182,8 +182,6 @@ h5 {
 
 #videoMedia, #imageMedia{
     margin-top: 20px;
-    /*background-color: white;*/
-    border-radius: 20px;
     padding: 1vh;
     display: flex;
     justify-content: space-between;
@@ -194,11 +192,13 @@ h5 {
 
 #imageMedia {
     background-color: rgba(0,0,0,0.7);
+    border-radius: 20px 20px 12px 12px;
 }
 
 #videoMedia {
     position: relative;
     padding-bottom: 56.25%;
+    border-radius: 20px;
     /*width: 95vh;*/
     /*height: 25vh;*/
 }
@@ -218,8 +218,8 @@ iframe {
 
 .projectImg {
     margin: 5px 10px;
-    max-width: 90vw;
-    max-height: 60vh;
+    height: 350px;
+    aspect-ratio: auto;
     border-radius: 15px;
     object-fit: contain;
 }
@@ -244,14 +244,22 @@ iframe {
 
 #comments > ul {
     list-style-type: none;
+    margin: 20px;
     width: 100%;
     background-color: white;
     border-radius: 20px;
-    max-height: 50vh;
+    max-height: 60vh;
     font-size: 4vw;
     padding: 1vh;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
     overflow-y: auto;
+}
+
+#comments > ul::-webkit-scrollbar-thumb {
+    overflow: hidden;
+}
+#comments > ul::-webkit-scrollbar-track {
+    border-radius: 0 20px 20px 0;
 }
 
 .userComment {
@@ -347,6 +355,8 @@ iframe {
 
 .inputOutline > textarea {
     /* 5% from the top, 15% from the bottom and centered */
+    outline: none;
+    box-shadow: none;
     border: 2px solid black;
     width: 100%;
     height: 70%;
@@ -381,6 +391,7 @@ iframe {
 
 #closeBtn:hover {
     background-color: red;
+    transition: background-color 0.2s, color 0.2s;
     color: rgba(255,255,255, 0.8);
     cursor: pointer;
 }
@@ -454,11 +465,12 @@ iframe {
         margin-top: 5px;
     }
 
-    #imageMedia{
+    #imageMedia::-webkit-scrollbar-track {
+        border-radius: 0 0 20px 20px;
+    }
+    #imageMedia::-webkit-scrollbar-thumb {
 
     }
-
-
 
     .logo-container {
         height: 80px;
@@ -492,17 +504,45 @@ iframe {
     }
 
     .inputOutline {
-        width: 50vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 50%;
         height: 20vw;
     }
 
+    .inputOutline h2 {
+        align-self: flex-start;
+    }
+    #closeBtn {
+        width: 50px;
+        height: 50px;
+    }
+
+    #addBtn:hover {
+        opacity: 0.7;
+        transition: opacity 0.2s;
+    }
+
     #addBtn {
-        width: 10vw;
-        height: 3.5vw;
+        width: 100px;
+        height: 50px;
+        position: unset;
+        align-self: flex-end;
+        margin-top: 10px
+    }
+
+    #input::-webkit-scrollbar-thumb {
+        overflow: hidden;
+        border-left: 1px solid rgba(0,0,0,0.7);
+    }
+    #input::-webkit-scrollbar-track{
+        border-radius: 0 20px 20px 0;
     }
 
     #input {
-        width: 47vw;
+        width: 48vw;
         height: 11vw;
         resize: none;
     }
